# dm-tool

./: CMakeLists.txt  README.md
.github/workflows/: package.yml
app/src/: bit_extractor.cpp  bit_extractor.h  dm_device_wrapper.cpp  dm_device_wrapper.h  main.cpp  main_window.cpp  main_window.h  motor_profile.cpp  motor_profile.h  motor_profile_loader.cpp  motor_profile_loader.h  telemetry_dashboard.cpp  telemetry_dashboard.h  telemetry_data_store.cpp  telemetry_data_store.h  telemetry_plot_panel.cpp  telemetry_plot_panel.h
cmake/: Package.cmake
config/profiles/: damiao_8motor.json
sdk/lib/windows/msvc/: dm_device.lib
